# ipfe-impl

./: .gitignore  CMakeLists.txt  README.md
example/: Makefile  fhipe.c  fhipe.out  msp.c  uabipfe.c  uzpipfe.c  uzpipfe.out  uzpipfe_27.c
example/RESULTS/uabipfe/len_00001/: massif_enc  massif_stat  mem_enc.txt  mem_keygen.txt  mem_stat.txt  time_all.txt  time_enc.txt  time_keygen.txt
example/RESULTS/uabipfe/len_00005/: massif_enc  massif_stat  mem_enc.txt  mem_keygen.txt  mem_stat.txt  time_all.txt  time_enc.txt  time_keygen.txt
example/RESULTS/uabipfe/len_00010/: massif_enc  massif_stat  mem_enc.txt  mem_keygen.txt  mem_stat.txt  time_all.txt  time_enc.txt  time_keygen.txt
example/RESULTS/uabipfe/len_00050/: massif_enc  massif_stat  mem_enc.txt  mem_keygen.txt  mem_stat.txt  time_all.txt  time_enc.txt  time_keygen.txt
example/RESULTS/uabipfe/len_00100/: massif_enc  massif_stat  mem_enc.txt  mem_keygen.txt  mem_stat.txt  time_all.txt  time_enc.txt  time_keygen.txt
example/RESULTS/uabipfe/len_00500/: massif_enc  massif_stat  mem_enc.txt  mem_keygen.txt  mem_stat.txt  time_all.txt  time_enc.txt  time_keygen.txt
example/RESULTS/uabipfe/len_01000/: massif_enc  massif_stat  mem_enc.txt  mem_keygen.txt  mem_stat.txt  time_all.txt  time_enc.txt  time_keygen.txt
example/RESULTS/uabipfe/len_05000/: massif_enc  massif_stat  mem_enc.txt  mem_keygen.txt  mem_stat.txt  time_all.txt  time_enc.txt  time_keygen.txt
example/RESULTS/uabipfe/len_10000/: massif_enc  massif_stat  mem_enc.txt  mem_keygen.txt  mem_stat.txt  time_all.txt  time_enc.txt  time_keygen.txt
example/RESULTS/uzpipfe/len_00001/: mem_enc.txt  mem_keygen.txt  mem_stat.txt  time_all.txt  time_enc.txt  time_keygen.txt
example/RESULTS/uzpipfe/len_00005/: mem_enc.txt  mem_keygen.txt  mem_stat.txt  time_all.txt  time_enc.txt  time_keygen.txt
example/RESULTS/uzpipfe/len_00010/: mem_enc.txt  mem_keygen.txt  mem_stat.txt  time_all.txt  time_enc.txt  time_keygen.txt
example/RESULTS/uzpipfe/len_00050/: mem_enc.txt  mem_keygen.txt  mem_stat.txt  time_all.txt  time_enc.txt  time_keygen.txt
example/RESULTS/uzpipfe/len_00100/: mem_enc.txt  mem_keygen.txt  mem_stat.txt  time_all.txt  time_enc.txt  time_keygen.txt
example/RESULTS/uzpipfe/len_00500/: mem_enc.txt  mem_keygen.txt  mem_stat.txt  time_all.txt  time_enc.txt  time_keygen.txt
include/cifer/: test.h
include/cifer/abe/: uabipfe.h
src/abe/: uabipfe.c
src/innerprod/fullysec/: uzpipfe.c  uzpipfe_27.c
test/: test.c
(+113 files in other folders)
